<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Qualification</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">WELCOME</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="main_title">Baking Fawder</string>
    <string name="title_activity_register">Sign Up</string>
    <string name="your_full_name">Your full name</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="subscribe_email">I want to subscribe my email!</string>
    <string name="title_activity_home">Home</string>
    <string name="rate_us">Rate Us!</string>
    <string name="send">Send a message</string>
    <string name="phone">Phone Number</string>
    <string name="message">Type a message..</string>
    <string name="usernameList">Username List</string>

</resources>
