<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AliceBlue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="my.pack.qualification.HomeActivity" >

    <SlidingDrawer
        android:id="@+id/slidingDrawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ratingBar"
        android:layout_centerHorizontal="true"
        android:allowSingleTap="true"
        android:animateOnClick="true"
        android:content="@+id/content"
        android:handle="@+id/sendTextView"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/sendTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/DimGray" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/FloralWhite"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textColor="@color/MediumTurquoise" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/messageEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/FloralWhite"
                android:ems="10"
                android:hint="@string/message"
                android:inputType="textMultiLine"
                android:textColor="@color/MediumTurquoise" />

            <Button
                android:id="@+id/smsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send" />

        </LinearLayout>
    </SlidingDrawer>

    <ToggleButton
        android:id="@+id/backgroundToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homeScrollView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:alpha="0.8"
        android:background="@color/LightSteelBlue"
        android:padding="10dp"
        android:text="ToggleButton"
        android:textColor="@color/Lavender"
        android:textOff="Light Background"
        android:textOn="Dark Background" />

    <TextView
        android:id="@+id/rateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backgroundToggleButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/rate_us"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/DimGray" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rateTextView"
        android:layout_centerHorizontal="true"
        android:numStars="5"
        android:rating="1.8"
        android:stepSize="0.5" />

    <TextView
        android:id="@+id/usernameListTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usernameList"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/DimGray" />

    <ScrollView
        android:id="@+id/homeScrollView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/ratingBar"
        android:layout_below="@+id/usernameListTextView"
        android:layout_marginTop="48dp" >

        <LinearLayout
            android:id="@+id/usernameLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
